// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnsibleCollectionDetails reducer should handle ANSIBLE_COLLECTION_DETAILS_ERROR 1`] = `
Object {
  "error": "things have gone terribly wrong",
  "itemCount": 0,
  "loading": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "results": Array [],
}
`;

exports[`AnsibleCollectionDetails reducer should handle ANSIBLE_COLLECTION_DETAILS_REQUEST 1`] = `
Object {
  "itemCount": 0,
  "loading": true,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "results": Array [],
}
`;

exports[`AnsibleCollectionDetails reducer should handle ANSIBLE_COLLECTION_DETAILS_SUCCESS 1`] = `
Object {
  "itemCount": 0,
  "loading": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "results": Array [],
}
`;

exports[`AnsibleCollectionDetails reducer should return the initial state 1`] = `
Object {
  "itemCount": 0,
  "loading": true,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "results": Array [],
}
`;
